# Risk

./: .gitignore  CMakeLists.txt  CMakeLists.txt.user.9e021d1  CMakeLists.txt.user.dc6f5e7  CMakeLists.txt.user.fb5ce94  DEVELOPERS.md  Doxyfile.in  LICENSE  README.md  Risk.files  Risk.includes  build.sh  osx-install.sh  pre-build.sh
assets/: risk.qrc
cli/: CMakeLists.txt  main.cpp  risk.cpp
cmake/: Find_Cereal.cmake  QtCommon.cmake  debug.cmake
gui/: CMakeLists.txt  GameDriver.cpp  GameDriver.h  army_attribute.cpp  army_attribute.h  battle_won_attribute.cpp  battle_won_attribute.h  button.cpp  button.h  card.h  card_attribute.cpp  cards_trade_dialog.cpp  cards_trade_dialog.h  cards_trade_dialog.ui  continent_attribute.cpp  continent_info_widget.h  country.cpp  country.h  country_attribute.cpp  country_attribute.h  country_name_dialog.cpp  country_name_dialog.h  country_name_dialog.ui  country_qgraphics_object.cpp  country_qgraphics_object.cpp.autosave  country_qgraphics_object.h  country_qgraphics_object.h.autosave  custom_country_connection.cpp  custom_country_connection.h  decorator_info_widget.cpp  decorator_info_widget.h  driver.cpp  driver.h  enum_savetype.h  enum_tooltype.h  fortify_dialog.cpp  fortify_dialog.h  fortify_dialog.ui  game_driver.cpp  game_driver.h  (+82 more)
gui/info_widgets/: army_attribute.cpp  battles_attribute.cpp  battles_attribute.h  card_attribute.cpp  card_attribute.h  continent_attribute.h  continent_info_widget.cpp  country_attribute.cpp  decorator_info_widget.h  iattribute.cpp  iinfo_widget.cpp  iinfo_widget.h  info_widget.cpp  info_widget.h  name_attribute.cpp  name_attribute.h
lib/: CMakeLists.txt  GraphADT.cpp  GraphADT.h  abstract_decorator.h  aggressive.cpp  aggressive.h  card.cpp  card.h  component.h  computer_player.cpp  computer_player.h  concrete_attack.cpp  concrete_attack.h  concrete_fortify.cpp  concrete_fortify.h  concrete_reinforce.cpp  concrete_reinforce.h  continent.cpp  continent.cpp.autosave  continent.h  country.cpp  country.h  countrylost.cpp  countrylost.h  debug.cpp  debug.h  decorator.cpp  decorator.h  defensive.cpp  defensive.h  dice.cpp  dice.h  dices.cpp  dices.h  dices_referee.cpp  dices_referee.h  dicesreferee.cpp  dicesreferee.h  game_driver.cpp  game_driver.h  (+37 more)
lib/ai/: aggressive.cpp  aggressive.h  defensive.cpp  defensive.h  random.cpp  random.h  strategy.cpp  strategy.h
lib/logging/: log_handler.h  log_listener.cpp  log_listener.h  logger.cpp  logger.h  phase_log_filter.cpp  phase_log_filter.h  player_log_filter.cpp  player_log_filter.h
maps/Canada/: Canada.map  Canada.xml
maps/Super/: SuperMap.map  SuperMap.map.bad  SuperMap.xml  SuperMap.xml.bad.xml
maps/USA (small)/: USA (small).map
maps/World/: World.map  World.xml
maps/World (Invalid)/: DisconnectedCountry.map  DisconnectedSubgraph.map  DisconnectedSubgraph.xml  EmptyContinent.map  EmptyContinent.xml
maps/WorldSimple/: worldsimple.map
resources/: AppIcon.icns
